<resources>
    <string name="app_name">Giffs</string>

    <string name="cookie">Cookie</string>
    <string name="authorization">Authorization</string>
    <string name="okhttp">OkHttp</string>
    <string name="giff_db">giff.db</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this gif?</string>
    <string name="yes">Yes</string>
    <string name="gif_deleted">Gif Deleted</string>
    <string name="no">No</string>
    <string name="delete_gif">Delete Gif</string>
    <string name="share_gif_">share_gif_</string>
    <string name="gif">.gif</string>
    <string name="downloading">Downloading</string>
    <string name="please_wait_gif_is_downloading">Please wait gif is downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="date_format">yyyyMMdd_HHmmss</string>
    <string name="_slash_giffs">/Giffs</string>
    <string name="are_you_sure_you_want_to_delete_all_saved">Are you sure you want to delete all saved</string>
    <string name="no_gif_saved_in_collections_yet">No Gif saved in collections yet</string>
    <string name="click_to_save_gif">Click to Save gif</string>
    <string name="saved_list_emptied">Saved list emptied</string>
    <string name="delete_all">Delete All</string>
    <string name="trending">Trending</string>
    <string name="saved">Saved</string>
    <string name="permission_denied">Permission DENIED</string>

    <string name="cant_save_until_gif_displayed">Can\'t save, until gif is displayed</string>
    <string name="cant_download_until_gif_is_loaded">Can\'t Download, Until gif is loaded</string>
    <string name="cant_share_until_gif_is_loaded">Can\'t Share, Until gif is Loaded</string>


    <!-- quick search -->
    <string name="music">music</string>
    <string name="happy">happy</string>
    <string name="sad">sad</string>
    <string name="dancing">dancing</string>
    <string name="dab">dab</string>
    <string name="sleep">sleeping</string>
    <string name="crying">crying</string>
    <string name="food">food</string>
    <string name="sports">sports</string>
    <string name="feelings">feelings</string>
    <string name="animals">animals</string>
    <string name="thumbs_up">thumbs up</string>
    <string name="want">want</string>
    <string name="win">win</string>
    <string name="YOLO">YOLO</string>
    <string name="wink">wink</string>
    <string name="yawn">yawn</string>
    <string name="yes_gif">yes</string>
    <string name="you_got_this">you got this</string>
    <string name="shrug">shrug</string>
    <string name="sigh">sigh</string>
    <string name="slow_clap">slow clap</string>
    <string name="sorry">sorry</string>
    <string name="thank_you">thank you</string>
    <string name="thumbs_down">thumbs down</string>
    <string name="please">please</string>
    <string name="popcorn">popcorn</string>
    <string name="SMH">SMH</string>
    <string name="scared">scared</string>
    <string name="seriously">seriously</string>
    <string name="shocked">shocked</string>
    <string name="mic_drop">mic drop</string>
    <string name="no_gif">no</string>
    <string name="OMG">OMG</string>
    <string name="oh_snap">oh snap</string>
    <string name="ok">OK</string>
    <string name="oops">oops</string>
    <string name="goodbye">goodbye</string>
    <string name="good_luck">good luck</string>
    <string name="happy_dance">happy dance</string>
    <string name="hearts">hearts</string>
    <string name="high_five">high five</string>
    <string name="hug">hug</string>
    <string name="IDK">IDK</string>
    <string name="kiss">kiss</string>
    <string name="deal_with_it">deal with it</string>
    <string name="do_not_want">do not want</string>
    <string name="awww">awww</string>
    <string name="dance">dance</string>
    <string name="eww">eww</string>
    <string name="eye_roll">eye roll</string>
    <string name="face_palm">face palm</string>
    <string name="applause">applause</string>
    <string name="agree">agree</string>





    <string name="search">Search</string>




    <string name="preference">Preference</string>
    <string name="about">About</string>

    <string name="about_description">Pixxo: Explore, Edit and Share Photos.\n\n Pixxo let you explore pictures, edit, write over them and share. Capture a moment and make it beautiful or explore pictures online and make them beautiful with Pixxo and Share with friends and family on your favorite social networks! \n\n Made with love by Kola Emiola and Api by https://pixabay.com </string>



    <string name="contacts">Contact</string>
    <string name="email">kolajubril@gmail.com</string>
    <string name="email_title">Email</string>
    <string name="web">http://www.kolaemiola.xyz/</string>
    <string name="website">My Website</string>
    <string name="github">breel93</string>
    <string name="ongithub">github</string>
    <string name="twitter">kola_emi</string>
    <string name="ontwitter">twitter</string>
    <string name="open_source_libs">Open Source Libraries</string>
    <string name="version">Version: 1.0</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="widget">Add Widget</string>
    <string name="library_text">Libraries</string>
    <string name="theme">Theme</string>
    <string name="themes">Themes</string>
    <string name="night_mode_disable">Night Mode Disable</string>
    <string name="close">Close</string>
    <string name="PACKAGE_NAME">com.example.kola</string>
    <string name="theme_state">ThemeState</string>
    <string name="night_mode_enabled">Night Mode Enabled</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
</resources>
