<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:padding="2dp"
            tools:context=".ui.preference.PreferenceFragment"
            android:background="?attr/backgroundcolor">

        <!-- TODO: Update blank fragment layout -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/themes" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp" android:id="@+id/themeText"
                app:layout_constraintBottom_toTopOf="@+id/switchButton"/>
        <Switch android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:text="@string/night_mode_disable"
                android:switchPadding="60dp"
                android:checked="false"
                android:theme="@style/SCBSwitch"
                android:drawablePadding="20dp"
                android:padding="3dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/themeText"
                app:layout_constraintStart_toStartOf="@+id/themeText"
                android:layout_marginStart="8dp" android:id="@+id/switchButton"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/close"
                android:id="@+id/closeButton"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/switchButton"
                app:layout_constraintEnd_toEndOf="@+id/switchButton"
                android:layout_marginEnd="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>